force-app/main/default/objects/Studenti__c/Studenti__c.object-meta.xml
<CustomObject>
    <label>Studenti</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Studenti Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Studenti</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>