force-app/main/default/objects/Studenti__c/fields/Aggiornato__c.field-meta.xml
<CustomField>
    <fullName>Aggiornato__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aggiornato</label>
    <type>Checkbox</type>
</CustomField>