force-app/main/default/objects/Studenti__c/fields/CognomeStudente__c.field-meta.xml
<CustomField>
    <fullName>CognomeStudente__c</fullName>
    <label>Cognome Studente</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>