force-app/main/default/objects/Studenti__c/fields/Corsi__c.field-meta.xml
<CustomField>
    <fullName>Corsi__c</fullName>
    <label>Corsi</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matematica</fullName>
            </value>
            <value>
                <fullName>Italiano</fullName>
            </value>
            <value>
                <fullName>Geografia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>