force-app/main/default/objects/Studenti__c/fields/Esito__c.field-meta.xml
<CustomField>
    <fullName>Esito__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Esito</label>
    <type>Checkbox</type>
</CustomField>