force-app/main/default/objects/Studenti__c/fields/NomeStudente__c.field-meta.xml
<CustomField>
    <fullName>NomeStudente__c</fullName>
    <label>Nome Studente</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>