force-app/main/default/objects/Studenti__c/fields/Privacy__c.field-meta.xml
<CustomField>
    <fullName>Privacy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privacy</label>
    <type>Checkbox</type>
</CustomField>